--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -699,19 +699,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
       "metadata": {
-        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab"
+        "id": "6b9b7fce-7231-4b44-9130-c9c600e799ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c5c33d4-58b5-4b1e-cc61-368dbf821062"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Student's Cumulative GPA: 3.75\n",
+            "Student's Semester GPA: 3.75\n",
+            "Student's Total Credits: 6.0\n",
+            "Scholarship Eligibility: Half-tuition\n"
+          ]
+        }
+      ],
       "source": [
         "#si-academic-record\n",
         "class Course:\n",
-        "    \"\"\"\n",
-        "    This class represents a single course taken by a student.\n",
-        "    \"\"\"\n",
-        "\n",
         "    def __init__(self, course, year, semester, credits, grade):\n",
         "        self.course = course\n",
         "        self.year = year\n",
@@ -719,16 +730,8 @@
         "        self.credits = credits\n",
         "        self.grade = grade\n",
         "\n",
-        "    def __str__(self):\n",
-        "        return f\"{self.course} - {self.semester} {self.year} ({self.credits} credits, Grade: {self.grade})\"\n",
-        "\n",
-        "\n",
         "class StudentRecord:\n",
-        "    \"\"\"\n",
-        "    This class represents a student and their academic information.\n",
-        "    \"\"\"\n",
-        "\n",
-        "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address, transcript=[]):\n",
+        "    def __init__(self, firstName, lastName, dob, hsName, hsCity, hsState, degree, address):\n",
         "        self.firstName = firstName\n",
         "        self.lastName = lastName\n",
         "        self.dob = dob\n",
@@ -737,80 +740,66 @@
         "        self.hsState = hsState\n",
         "        self.degree = degree\n",
         "        self.address = address\n",
-        "        self.transcript = transcript\n",
+        "        self.transcript = []\n",
         "\n",
         "    def cumGPA(self):\n",
-        "        \"\"\"\n",
-        "        Calculates and returns the cumulative GPA of the student.\n",
-        "        \"\"\"\n",
-        "        total_credits = 0\n",
-        "        total_points = 0\n",
-        "        for course in self.transcript:\n",
-        "            total_credits += course.credits\n",
-        "            if course.grade == \"A\":\n",
-        "                total_points += 4 * course.credits\n",
-        "            elif course.grade == \"B\":\n",
-        "                total_points += 3 * course.credits\n",
-        "            elif course.grade == \"C\":\n",
-        "                total_points += 2 * course.credits\n",
-        "            elif course.grade == \"D\":\n",
-        "                total_points += 1 * course.credits\n",
-        "        if total_credits != 0:\n",
-        "            return round(total_points / total_credits, 2)\n",
-        "        else:\n",
+        "        if not self.transcript:\n",
         "            return 0.0\n",
         "\n",
-        "    def semGPA(self, semester, year):\n",
-        "        \"\"\"\n",
-        "        Calculates and returns the semester GPA based on provided semester and year.\n",
-        "        \"\"\"\n",
+        "        total_grade_points = 0\n",
         "        total_credits = 0\n",
-        "        total_points = 0\n",
+        "\n",
         "        for course in self.transcript:\n",
-        "            if course.year == year and course.semester == semester:\n",
-        "                total_credits += course.credits\n",
-        "                if course.grade == \"A\":\n",
-        "                    total_points += 4 * course.credits\n",
-        "                elif course.grade == \"B\":\n",
-        "                    total_points += 3 * course.credits\n",
-        "                elif course.grade == \"C\":\n",
-        "                    total_points += 2 * course.credits\n",
-        "                elif course.grade == \"D\":\n",
-        "                    total_points += 1 * course.credits\n",
-        "        if total_credits != 0:\n",
-        "            return round(total_points / total_credits, 2)\n",
-        "        else:\n",
+        "            total_grade_points += course.grade * course.credits\n",
+        "            total_credits += course.credits\n",
+        "\n",
+        "        return total_grade_points / total_credits if total_credits > 0 else 0.0\n",
+        "\n",
+        "    def semGPA(self):\n",
+        "        if not self.transcript:\n",
         "            return 0.0\n",
+        "\n",
+        "        total_grade_points = 0\n",
+        "        total_credits = 0\n",
+        "\n",
+        "        for course in self.transcript:\n",
+        "            if course.semester == \"Fall\" or course.semester == \"Spring\":\n",
+        "                total_grade_points += course.grade * course.credits\n",
+        "                total_credits += course.credits\n",
+        "\n",
+        "        return total_grade_points / total_credits if total_credits > 0 else 0.0\n",
         "\n",
         "    def credits(self):\n",
-        "        \"\"\"\n",
-        "        Counts and returns the total number of credits accumulated by the student.\n",
-        "        \"\"\"\n",
         "        total_credits = 0\n",
+        "\n",
         "        for course in self.transcript:\n",
         "            total_credits += course.credits\n",
-        "        return total_credits\n",
+        "\n",
+        "        return float(total_credits)\n",
         "\n",
         "    def newCourse(self, course, year, semester, credits, grade):\n",
-        "        \"\"\"\n",
-        "        Adds a new course to the student's transcript.\n",
-        "        \"\"\"\n",
-        "        self.transcript.append(Course(course, year, semester, credits, grade))\n",
+        "        new_course = Course(course, year, semester, credits, grade)\n",
+        "        self.transcript.append(new_course)\n",
         "\n",
         "    def scholarship(self):\n",
-        "        \"\"\"\n",
-        "        Determines and returns the scholarship eligibility based on cumulative GPA.\n",
-        "        \"\"\"\n",
-        "        gpa = self.cumGPA()\n",
-        "        if gpa >= 3.9:\n",
+        "        cumulative_gpa = self.cumGPA()\n",
+        "\n",
+        "        if cumulative_gpa >= 3.9:\n",
         "            return \"Full-ride\"\n",
-        "        elif gpa >= 3.63:\n",
+        "        elif cumulative_gpa >= 3.63:\n",
         "            return \"Half-tuition\"\n",
-        "        elif gpa >= 3.3:\n",
+        "        elif cumulative_gpa >= 3.3:\n",
         "            return \"Quarter-tuition\"\n",
         "        else:\n",
         "            return \"Not Eligible\"\n",
+        "student = StudentRecord(\"John\", \"Doe\", \"01/01/2000\", \"High School\", \"City\", \"State\", \"Computer Science\", \"123 Main St\")\n",
+        "student.newCourse(\"Math 101\", 2023, \"Fall\", 3, 4.0)\n",
+        "student.newCourse(\"History 101\", 2024, \"Spring\", 3, 3.5)\n",
         "\n",
+        "print(f\"Student's Cumulative GPA: {student.cumGPA()}\")\n",
+        "print(f\"Student's Semester GPA: {student.semGPA()}\")\n",
+        "print(f\"Student's Total Credits: {student.credits()}\")\n",
+        "print(f\"Scholarship Eligibility: {student.scholarship()}\")\n",
         "\n"
       ]
     }
